--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@ body {
 }
 .start-section {
   flex: 8;
+  display: flex;
+  flex-direction: row;
 }
 .title {
   flex: 1;
@@ -26,15 +28,16 @@ body {
   justify-content: flex-start;
   align-items: center;
 }
-.randomize, .reset {
+.randomize,
+.reset {
   flex: 2;
 }
 .title-battleship {
-  font-family: 'Lexend';
+  font-family: "Lexend";
   font-size: 35px;
 }
 .title-battleship + p {
-  font-family: 'Lexend';
+  font-family: "Lexend";
   font-size: 20px;
 }
 .randomize {
@@ -43,7 +46,7 @@ body {
   align-items: center;
 }
 .randomize > p {
-  font-family: 'Lexend';
+  font-family: "Lexend";
   font-size: 25px;
   cursor: pointer;
 }
@@ -56,11 +59,45 @@ body {
   align-items: center;
 }
 .reset > p {
-  font-family: 'Lexend';
+  font-family: "Lexend";
   font-size: 25px;
   cursor: pointer;
 }
 .reset > p:hover {
   text-decoration: black wavy underline;
 }
-
+.place-ships {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.ships-title {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ships-title > p {
+  font-family: "Lexend";
+  font-size: 25px;
+}
+.ships {
+  flex: 7;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.ships > div {
+  display: flex;
+  flex-direction: row;
+  padding-left: 40%;
+}
+.ships > div > div {
+  height: 35px;
+  width: 35px;
+  border: 1px solid rgb(58, 125, 226);
+}
+.board {
+  flex: 2;
+}
