--- a/src/styles.css
+++ b/src/styles.css
@@ -98,6 +98,37 @@ body {
   width: 35px;
   border: 1px solid rgb(58, 125, 226);
 }
-.board {
+.initial-board {
   flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
 }
+.board-title {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.board-title > p {
+  font-family: "Lexend";
+  font-size: 25px;
+}
+.game-board {
+  flex: 7;
+  display: flex;
+  flex-direction: column;
+}
+.game-board > div {
+  display: flex;
+  flex-direction: row;
+}
+.game-board > div > div {
+  height: 35px;
+  width: 35px;
+  border: 1px solid black;
+}
+
+
