--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,6 @@
   margin: 0;
   padding: 0;
 }
-.game-section {
-  display: none;
-}
 body {
   display: flex;
   flex-direction: column;
@@ -20,6 +17,7 @@ body {
   flex: 8;
   display: flex;
   flex-direction: row;
+  display: none;
 }
 .title {
   flex: 1;
@@ -66,69 +64,47 @@ body {
 .reset > p:hover {
   text-decoration: black wavy underline;
 }
-.place-ships {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-.ships-title {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.ships-title > p {
-  font-family: "Lexend";
-  font-size: 25px;
-}
-.ships {
-  flex: 7;
-  display: flex;
-  flex-direction: column;
-  gap: 35px;
-}
-.ships > div {
-  display: flex;
-  flex-direction: row;
-  padding-left: 40%;
-}
-.ships > div > div {
-  height: 35px;
-  width: 35px;
-  border: 1px solid rgb(58, 125, 226);
-}
-.initial-board {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-}
-.board-title {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.board-title > p {
-  font-family: "Lexend";
-  font-size: 25px;
-}
-.game-board {
-  flex: 7;
-  display: flex;
-  flex-direction: column;
-}
-.game-board > div {
+.game-section {
+  flex: 6;
   display: flex;
   flex-direction: row;
 }
-.game-board > div > div {
-  height: 35px;
-  width: 35px;
+.game-section > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.real-player-title,
+.computer-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+.real-player-title > p,
+.computer-title > p {
+  font-size: 32px;
+  font-family: "Lexend";
+}
+.board,
+.computer-board {
+  flex: 8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.board > div,
+.computer-board > div {
+  display: flex;
+  flex-direction: row;
+}
+.board > div > div,
+.computer-board > div > div {
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
 }
-
-
+#drop {
+  background-color: rgb(139, 185, 245);
+}
