--- a/src/styles.css
+++ b/src/styles.css
@@ -149,3 +149,24 @@ body {
   border: 1px solid black;
   cursor: pointer;
 }
+.conclusion-section {
+  flex: 7;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+.conclusion-section > p {
+  font-family: "Lexend";
+  font-size: 40px;
+}
+.home-screen {
+  font-family: "Lexend";
+  font-size: 30px;
+  padding: 8px;
+  border: 0;
+  background-color: rgba(0, 145, 255, 0.404);
+  border-radius: 4px;
+  cursor: pointer;
+}
